Electron app rewrite : docker communication issue. ListImages does not work. Temp commit

--- a/electron_vite/src/renderer/index.html
+++ b/electron_vite/src/renderer/index.html
@@ -1,42 +1,34 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <title>Electron</title>
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
-    />
+    <title>AccessMod</title>
+    <style>
+      body,
+      html {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+      #logo {
+        width: 50px;
+      }
 
-    <link href="./assets/main.css" type="text/css" rel="stylesheet" />
+      #msg {
+        padding: 30px;
+        max-width: 400px;
+      }
+    </style>
   </head>
-
   <body>
-    <div id="app">
-      <img alt="logo" class="logo" src="./assets/electron.svg" />
-      <div class="creator">Powered by electron-vite</div>
-      <div class="text">
-        Build an Electron app with
-        <span class="js">JavaScript</span>
-      </div>
-      <p class="tip">Please try pressing <code>F12</code> to open the devTool</p>
-      <div class="actions">
-        <div class="action">
-          <a href="https://electron-vite.org/" target="_blank" rel="noreferrer">Documentation</a>
-        </div>
-        <div class="action">
-          <a id="ipcHandler" target="_blank" rel="noreferrer">Send IPC</a>
-        </div>
-      </div>
-
-      <ul class="versions">
-        <li class="electron-version"></li>
-        <li class="chrome-version"></li>
-        <li class="node-version"></li>
-      </ul>
-    </div>
-
-    <script type="module" src="./src/renderer.js"></script>
+    <img alt="logo" id="logo" src="assets/logo1024x1024.png" />
+    <span class="info" id="msgInfo">...</span>
+    <ul class="error" id="msgError"></ul>
   </body>
 </html>
